# easyflags

./: CMakeLists.txt  Makefile  README.md
examples/: ex1.cpp
include/: EasyFlags.hpp
src/: EasyFlags.cpp
